Fix line CSS during editing state

--- a/src/app/custom-line-css/custom-line-css.component.scss
+++ b/src/app/custom-line-css/custom-line-css.component.scss
@@ -4,7 +4,7 @@
 }
 
 aw-wizard.custom-line-css {
-  aw-wizard-navigation-bar.horizontal ul.steps-indicator li.done:not(:last-child):after {
+  aw-wizard-navigation-bar.horizontal ul.steps-indicator li.done:not(.editing):not(:last-child):after {
     background-color: green !important;
   }
 }
