Prepare for the next Development Iteration

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -232,7 +232,7 @@
       <router-outlet></router-outlet>
     </main>
     <footer class="bg-light text-center py-2 mt-4">
-      <p class="my-2">This demo uses angular-archwizard version 6.1.0</p>
+      <p class="my-2">This demo uses angular-archwizard version 7.0.0-develop</p>
 
       <form class="form mx-auto github text-center">
         <a class="github-button"
