enhancement: add an example for nested wizards

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -223,6 +223,10 @@
         <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
           <a>Wizard step with *ngFor</a>
         </li>
+
+        <li routerLink="/nested-wizards" routerLinkActive="active">
+          <a>Nested wizards</a>
+        </li>
       </ul>
     </div>
   </div>
